k8s/helm/minio-biscuit-helm.yaml
---
# Source: tenant/templates/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biscuit
  annotations: 
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cf-tunnel-operator.walnuts.dev/ignore: "true"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - "minio-biscuit.local.walnuts.dev"
      secretName: minio-biscuit-tls
  rules:
    - host: minio-biscuit.local.walnuts.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: http-minio
    - host: "*.minio-biscuit.local.walnuts.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: http-minio
---
# Source: tenant/templates/console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biscuit-console
  annotations: 
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cf-tunnel-operator.walnuts.dev/ignore: "true"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - "minio-biscuit-console.local.walnuts.dev"
      secretName: minio-biscuit-console-tls
  rules:
    - host: minio-biscuit-console.local.walnuts.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: biscuit-console
                port:
                  name: http-console
---
# Source: tenant/templates/checks.yaml
# If an existing secret is used, do not set access-key and secret-key explicitly
# (note that we allow the default settings in values.yaml)

# If configuration.name is set and not the same as configSecret.name,
# then we should raise an error and abort
